<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="se.jakob.knarkklocka.TimerActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_history_white_24dp"
        android:orderInCategory="90"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
</menu>
