...
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_start_timer"
            tools:layout_editor_absoluteX="0dp">

            <Button
                android:id="@+id/button_remove_timer"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/btn_selector"
                android:enabled="@{!safeUnbox(viewModel.isDead)}"
                android:text="@string/remove"
...
